--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 
 <head>
     <meta charset="utf-8">
@@ -20,7 +20,7 @@
     <script src="js/jquery.touchSwipe.js" defer></script>
     <script src="js/gmaps.js"></script>
 
-    <title>.</title>
+    <title>La Panthère</title>
 
 
     <!-- Analytics -->
