change link on footer stop 4xx error

--- a/index.html
+++ b/index.html
@@ -255,38 +255,38 @@
                             <div class="col-sm-4">
                                 Partenaires
                                 <ul>
-                                    <li><a href="voiture.com">voiture.com</a></li>
-                                    <li><a href="pizza.com">pizza.com</a></li>
-                                    <li><a href="matoiture.com">matoiture.com</a></li>
-                                    <li><a href="immobilierseo.com">immobilierseo.com</a></li>
+                                    <li><a href="http://voiture.com" target="_blank">voiture.com</a></li>
+                                    <li><a href="http://pizza.com" target="_blank">pizza.com</a></li>
+                                    <li><a href="http://matoiture.com" target="_blank">matoiture.com</a></li>
+                                    <li><a href="http://immobilierseo.com" target="_blank">immobilierseo.com</a></li>
                                 </ul>
                             </div>
                             <div class="col-sm-4">
                                 Annuaires liste 1
                                 <ul>
-                                    <li><a href="annuaireagence.com">annuaireagence.com</a></li>
-                                    <li><a href="annuaireseo.com">annuaireseo.com</a></li>
-                                    <li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-                                    <li><a href="123seoture.com">123seo.com</a></li>
-                                    <li><a href="123site.com">123site.com</a></li>
-                                    <li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-                                    <li><a href="listeagence.com">listeagence.com</a></li>
-                                    <li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-                                    <li><a href="listeseo.com">listeseo.com</a></li>
+                                    <li><a href="http://annuaireagence.com" target="_blank">annuaireagence.com</a></li>
+                                    <li><a href="http://annuaireseo.com" target="_blank">annuaireseo.com</a></li>
+                                    <li><a href="http://annuairemarketing.com" target="_blank">annuairemarketing.com</a></li>
+                                    <li><a href="http://123seoture.com">123seo.com</a></li>
+                                    <li><a href="http://123site.com" target="_blank">123site.com</a></li>
+                                    <li><a href="http://annuairewordpress.com" target="_blank">annuairewordpress.com</a></li>
+                                    <li><a href="http://listeagence.com" target="_blank">listeagence.com</a></li>
+                                    <li><a href="http://meilleuresagencesparis.com" target="_blank">meilleuresagencesparis.com</a></li>
+                                    <li><a href="http://listeseo.com" target="_blank">listeseo.com</a></li>
                                 </ul>
                             </div>
                             <div class="col-sm-4">
                                 Annuaires liste 2
                                 <ul>
-                                    <li><a href="betterseo.com">betterseo.com</a></li>
-                                    <li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-                                    <li><a href="seojuicelien.com">seojuicelien.com</a></li>
-                                    <li><a href="meilleursliens.com">meilleursliens.com</a></li>
-                                    <li><a href="liensagogo.com">liensagogo.com</a></li>
-                                    <li><a href="backlink.com">backlink.com</a></li>
-                                    <li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-                                    <li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-                                    <li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
+                                    <li><a href="http://betterseo.com" target="_blank">betterseo.com</a></li>
+                                    <li><a href="http://ameliorerseo.com" target="_blank">ameliorerseo.com</a></li>
+                                    <li><a href="http://seojuicelien.com" target="_blank">seojuicelien.com</a></li>
+                                    <li><a href="http://meilleursliens.com" target="_blank">meilleursliens.com</a></li>
+                                    <li><a href="http://liensagogo.com" target="_blank">liensagogo.com</a></li>
+                                    <li><a href="http://backlink.com" target="_blank">backlink.com</a></li>
+                                    <li><a href="http://linkjuiceannuaire.com" target="_blank">linkjuiceannuaire.com</a></li>
+                                    <li><a href="http://remontersurgoogle.com" target="_blank">remontersurgoogle.com</a></li>
+                                    <li><a href="http://vraiseofiable.com" target="_blank">vraiseofiable.com</a></li>
                                 </ul>
                             </div>
                         </div>
