--- a/index.html
+++ b/index.html
@@ -49,10 +49,7 @@
                     <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
                         <ul class="site-navigation nav navbar-nav">
                             <li>
-                                <a href="index.html">Accueil</a>
-                            </li>
-                            <li>
-                                <a href="page2.html">page2 &gt;</a>
+                                <a href="contact.html">Contact</a>
                             </li>
                         </ul>
                     </div>
