--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
                         <ul class="site-navigation nav navbar-nav">
                             <li>
-                                <a href="contact.html">Contact</a>
+                                <a href="contact.html">Contacter notre agence</a>
                             </li>
                         </ul>
                     </div>
@@ -68,7 +68,7 @@
                             Agence La Panthère
                         </h1>
                         <div class="text-center">
-                            <a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+                            <a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
                         </div>
                     </div>
                 </div>
