modification on 2 page links

--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
                     <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
                         <ul class="site-navigation nav navbar-nav">
                             <li>
-                                <a href="contact.html">Contacter notre agence</a>
                             </li>
                         </ul>
                     </div>
@@ -68,7 +67,7 @@
                             Agence La Panthère
                         </h1>
                         <div class="text-center">
-                            <a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+                            <a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contactez notre équipe</a>
                         </div>
                     </div>
                 </div>
@@ -140,7 +139,7 @@
                         <p class="text-center white">
                             Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre
                             site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link"
-                                href="page2.html">Contactez notre équipe</a><br>
+                                href="contact.html">Contactez notre équipe</a><br>
                         </p>
                     </div>
                 </div>
