--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <script src="js/jquery.touchSwipe.js" defer></script>
     <script src="js/gmaps.js"></script>
 
-    <title>La Panthère</title>
+    <title>La Panthère Agence Web Design</title>
 
 
     <!-- Analytics -->
