--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="js/jquery.touchSwipe.js" defer></script>
     <script src="js/gmaps.js"></script>
 
-    <title>La Panthère</title>
+    <title>La Panthère Agence Web Design</title>
 
 
     <!-- Analytics -->
@@ -207,7 +207,7 @@
                         Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
                     </h2>
                     <div class="col-sm-12 text-center">
-                        <a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+                        <a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
                     </div>
                 </div>
             </div>
@@ -225,22 +225,22 @@
                         <div class="row row-no-gutters social">
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+                                    <a class="social" href="#"><span class="fa fa-twitter icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+                                    <a class="social" href="#"><span class="fa fa-facebook icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+                                    <a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+                                    <a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
