--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
     <!-- Principal conteneur -->
     <div class="page-container">
 
+        <!-- bloc-0 -->
+        <div class="bloc bgc-white l-bloc " id="bloc-0">
+            <div class="container bloc-sm">
+
+                <nav class="navbar row">
+                    <div class="navbar-header">
+                        <div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+                        <a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" /></a>
+                    </div>
+                </nav>
+            </div>
+        </div>
+        <!-- bloc-0 END -->
 
         <!-- bloc-1-presentation -->
         <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
