--- a/contact.html
+++ b/contact.html
@@ -79,24 +79,24 @@
             <div class="container bloc-lg">
                 <div class="row">
                     <div class="col-sm-6">
-                        <form id="form_1" novalidate data-success-msg="Your message has been sent." data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+                        <form method="get" action="includes/form_1.php" id="form_1" novalidate data-success-msg="Your message has been sent." data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
                             <div class="form-group">
                                 <label>
 							Nom
 						</label>
-                                <input id="name" class="form-control" required />
+                                <input id="name" class="form-control" required>
                             </div>
                             <div class="form-group">
                                 <label>
 							Adresse email
 						</label>
-                                <input id="email" class="form-control" type="email" required />
+                                <input id="email" class="form-control" type="email" required>
                             </div>
                             <div class="form-group">
                                 <label>
 							Comment nous avez-vous connu ?
 						</label>
-                                <input class="form-control" type="email" required id="input_504" />
+                                <input class="form-control" type="email" required id="input_504">
                             </div>
                             <div class="form-group">
                                 <label>
