--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
             <div class="container bloc-lg">
                 <div class="row">
                     <div class="col-sm-6">
-                        <form method="POST" action="includes/form_1.php" id="form_1" novalidate data-success-msg="Your message has been sent." data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+                        <form id="form_1" novalidate data-success-msg="Your message has been sent." data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
                             <div class="form-group">
                                 <label>
 							Nom
@@ -112,6 +112,7 @@
                         <p>
                             contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
                         </p>
+                        <div id="GMaps"></div>
                     </div>
                 </div>
             </div>
