--- a/index.html
+++ b/index.html
@@ -2,24 +2,32 @@
 <html lang="fr">
 
 <head>
+
     <meta charset="utf-8">
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name=”robots” content=”index,follow”>
+    <!-- META FB -->
+    <meta property="og:image" content="https://zzmck.github.io/Session4/img/logo.png">
+    <meta property="og:description" content="">
+    <meta property="og:title" content="La meilleure agence de WebDesign sur lyon">
+    <!-- META twitter -->
+    <meta name="twitter:title" content="La meilleure agence de WebDesign sur lyon.">
+    <!-- a modifier-->
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+    <!--<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">-->
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="css/et-line.css">
 
-
     <script src="js/jquery-2.1.0.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/blocs.js"></script>
     <script src="js/jquery.touchSwipe.js" defer></script>
     <script src="js/gmaps.js"></script>
-
     <title>La Panthère Agence Web Design</title>
 
 
@@ -36,11 +44,33 @@
         <!-- bloc-0 -->
         <div class="bloc bgc-white l-bloc " id="bloc-0">
             <div class="container bloc-sm">
-
                 <nav class="navbar row">
                     <div class="navbar-header">
                         <div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
                         <a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40"></a>
+                        <div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+                        <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+                <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+            </button>
+                    </div>
+                    <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+                        <ul class="site-navigation nav navbar-nav">
+                            <li>
+                                <a href="#Présentation">Présentation</a>
+                            </li>
+                            <li>
+                                <a href="#Services">Services</a>
+                            </li>
+                            <li>
+                                <a href="#Objectifs">Objectifs</a>
+                            </li>
+                            <li>
+                                <a href="#Portfolio">Portfolio</a>
+                            </li>
+                            <li>
+                                <a href="#Contact">Contact</a>
+                            </li>
+                        </ul>
                     </div>
                 </nav>
             </div>
@@ -48,7 +78,7 @@
         <!-- bloc-0 END -->
 
         <!-- bloc-1-presentation -->
-        <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+        <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="Accueil">
             <div class="container bloc-lg">
                 <div class="row tight-width-whitespace">
                     <div class="col-sm-12">
@@ -66,7 +96,7 @@
         <!-- bloc-1-presentation END -->
 
         <!-- bloc-2-services -->
-        <div class="bloc bgc-white l-bloc" id="bloc-2-services">
+        <div class="bloc bgc-white l-bloc" id="Services">
             <div class="container bloc-md">
                 <div class="row">
                     <div class="col-sm-12 text-center">
@@ -119,8 +149,8 @@
         </div>
         <!-- bloc-2-services END -->
 
-        <!-- bloc-3-what-i-do -->
-        <div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+        <!-- bloc-3-what-i-do Objectifs -->
+        <div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="Objectifs">
             <div class="container bloc-lg">
                 <div class="row tight-width-whitespace black-background">
                     <div class="col-sm-12">
@@ -139,7 +169,7 @@
         <!-- bloc-3-what-i-do END -->
 
         <!-- bloc-4-portfolio -->
-        <div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+        <div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="Portfolio">
             <div class="container bloc-lg">
                 <div class="row">
                     <div class="col-sm-12 text-center">
@@ -204,7 +234,9 @@
             </div>
         </div>
         <!-- bloc-5-cta END -->
-
+        <!-- ScrollToTop Button -->
+        <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+        <!-- ScrollToTop Button END-->
         <!-- Footer - bloc-8 -->
         <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
             <div class="container bloc-sm">
