--- a/acceuil.html
+++ b/acceuil.html
@@ -46,9 +46,7 @@
             <div class="container bloc-sm">
                 <nav class="navbar row">
                     <div class="navbar-header">
-                        <div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
                         <a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40"></a>
-                        <div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
                 <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
             </button>
@@ -56,19 +54,19 @@
                     <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
                         <ul class="site-navigation nav navbar-nav">
                             <li>
-                                <a href="#Présentation">Présentation</a>
+                                <a href="acceuil#Présentation">Présentation</a>
                             </li>
                             <li>
-                                <a href="#Services">Services</a>
+                                <a href="acceuil#Services">Services</a>
                             </li>
                             <li>
-                                <a href="#Objectifs">Objectifs</a>
+                                <a href="acceuil#Objectifs">Objectifs</a>
                             </li>
                             <li>
-                                <a href="#Portfolio">Portfolio</a>
+                                <a href="acceuil#Portfolio">Portfolio</a>
                             </li>
                             <li>
-                                <a href="#Contact">Contact</a>
+                                <a href="contact#NousTrouver">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -87,7 +85,7 @@
                             Agence La Panthère
                         </h1>
                         <div class="text-center">
-                            <a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contactez notre équipe</a>
+                            <a href="contact#Formulaire" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contactez notre équipe</a>
                         </div>
                     </div>
                 </div>
@@ -160,7 +158,7 @@
                         <p class="text-center white">
                             Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre
                             site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link"
-                                href="contact.html">Contactez notre équipe</a><br>
+                                href="contact#Formulaire">Contactez notre équipe</a><br>
                         </p>
                     </div>
                 </div>
@@ -228,7 +226,7 @@
                         Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
                     </h2>
                     <div class="col-sm-12 text-center">
-                        <a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+                        <a href="contact#Formulaire" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
                     </div>
                 </div>
             </div>
