--- a/contact.html
+++ b/contact.html
@@ -40,9 +40,7 @@
             <div class="container bloc-sm">
                 <nav class="navbar row">
                     <div class="navbar-header">
-                        <div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
-                        <a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40"></a>
-                        <div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+                        <a class="navbar-brand" href="accueil#présentation"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40"></a>
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -50,7 +48,7 @@
                     <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
                         <ul class="site-navigation nav navbar-nav">
                             <li>
-                                <a href="index.html">Retour à l'accueil</a>
+                                <a href="accueil#présentation">Retour à l'accueil</a>
                             </li>
                         </ul>
                     </div>
@@ -60,7 +58,7 @@
         <!-- bloc-0 END -->
 
         <!-- bloc-6 -->
-        <div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+        <div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="NousTrouver">
             <div class="container bloc-lg">
                 <div class="row">
                     <div class="col-sm-12">
@@ -77,12 +75,13 @@
         <!-- bloc-6 END -->
 
         <!-- bloc-7 -->
-        <div class="bloc bgc-white l-bloc" id="bloc-7">
+        <div class="bloc bgc-white l-bloc" id="Formulaire">
             <div class="container bloc-lg">
                 <div class="row">
                     <div class="col-sm-6">
-                        <form id="form_1" novalidate data-success-msg="Your message has been sent." data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
-                            <div class="form-group">
+                        <form id="form_1" novalidate>
+                            <!--data-success-msg="Your message has been sent." data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"-->
+                            <div class="form-group" required>
                                 <label>
 							Nom
 						</label>
@@ -98,7 +97,7 @@
                                 <label>
 							Comment nous avez-vous connu ?
 						</label>
-                                <input class="form-control" type="email" required id="input_504">
+                                <input id="input_504" class="form-control" type="text" required>
                             </div>
                             <div class="form-group">
                                 <label>
@@ -110,11 +109,10 @@
 					</button>
                         </form>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-sm-6" id="Adresse">
                         <p>
                             contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
                         </p>
-                        <div id="GMaps"></div>
                     </div>
                 </div>
             </div>
