--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
             <div class="container bloc-sm">
                 <nav class="navbar row">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="accueil#présentation"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40"></a>
+                        <a class="navbar-brand" href="acceuil#présentation"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40"></a>
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -48,7 +48,7 @@
                     <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
                         <ul class="site-navigation nav navbar-nav">
                             <li>
-                                <a href="accueil#présentation">Retour à l'accueil</a>
+                                <a href="acceuil#présentation">Retour à l'accueil</a>
                             </li>
                         </ul>
                     </div>
