--- a/acceuil.html
+++ b/acceuil.html
@@ -42,14 +42,14 @@
     <div class="page-container">
 
         <!-- bloc-0 -->
-        <div class="bloc bgc-white l-bloc " id="bloc-0">
+        <div class="bloc bgc-white l-bloc menu_fixed" id="bloc-0">
             <div class="container bloc-sm">
                 <nav class="navbar row">
                     <div class="navbar-header">
                         <a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40"></a>
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-                <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-            </button>
+                            <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+                        </button>
                     </div>
                     <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
                         <ul class="site-navigation nav navbar-nav">
@@ -76,7 +76,7 @@
         <!-- bloc-0 END -->
 
         <!-- bloc-1-presentation -->
-        <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="Accueil">
+        <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax submenu" id="Accueil">
             <div class="container bloc-lg">
                 <div class="row tight-width-whitespace">
                     <div class="col-sm-12">
@@ -99,7 +99,7 @@
                 <div class="row">
                     <div class="col-sm-12 text-center">
                         <h2 class="display:none;">Nos solutions</h2>
-                        <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png">
+                        <p class="subtitle">L'agence La Panthère est une agence de web design qui aide<br>les entreprises à devenir attractives et visibles sur Internet.</p>
                     </div>
                 </div>
                 <div class="row voffset-lg med-width-whitespace">
@@ -139,8 +139,8 @@
                 </div>
                 <div class="row voffset-lg voffset">
                     <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-                        <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png">
-
+                        <p class="citation">"L'agence La Panthère est une excellente agence web! Les<br> web designers ont réussi à capturer l'essence de notre <br> entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</p>
+                        <p class="citation-name">Maxime Guibard, PDG de À vos fourchettes</p>
                     </div>
                 </div>
             </div>
@@ -171,7 +171,7 @@
             <div class="container bloc-lg">
                 <div class="row">
                     <div class="col-sm-12 text-center">
-                        <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png">
+                        <h2>Nous travaillons avec beaucoup de clients,<br>voici nos réalisations</h2>
                     </div>
                 </div>
                 <div class="row tight-width-whitespace portfolio-row">
