--- a/contact.html
+++ b/contact.html
@@ -79,9 +79,9 @@
             <div class="container bloc-lg">
                 <div class="row">
                     <div class="col-sm-6">
-                        <form id="form_1" novalidate>
-                            <!--data-success-msg="Your message has been sent." data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"-->
-                            <div class="form-group" required>
+                        <form id="form_1">
+                            <!--novalidate data-success-msg="Your message has been sent." data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"-->
+                            <div class="form-group">
                                 <label>
 							Nom
 						</label>
