Add google tag GTAG analitics on 2 page

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,18 @@
 
 
     <!-- Analytics -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9BQBKDFYLW"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-9BQBKDFYLW');
+    </script>
     <!-- Analytics END -->
 
 </head>
