--- a/contact.html
+++ b/contact.html
@@ -43,10 +43,11 @@
 </head>
 
 <body>
+
     <!-- Principal conteneur -->
-    <div class="page-container">
+    <main class="page-container">
         <!-- bloc-0 -->
-        <div class="bloc bgc-white l-bloc " id="bloc-0">
+        <header class="bloc bgc-white l-bloc " id="bloc-0">
             <div class="container bloc-sm">
                 <nav class="navbar row">
                     <div class="navbar-header">
@@ -64,11 +65,11 @@
                     </div>
                 </nav>
             </div>
-        </div>
+        </header>
         <!-- bloc-0 END -->
 
         <!-- bloc-6 -->
-        <div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="NousTrouver">
+        <section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="NousTrouver">
             <div class="container bloc-lg">
                 <div class="row">
                     <div class="col-sm-12">
@@ -81,11 +82,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- bloc-6 END -->
 
         <!-- bloc-7 -->
-        <div class="bloc bgc-white l-bloc" id="Formulaire">
+        <section class="bloc bgc-white l-bloc" id="Formulaire">
             <div class="container bloc-lg">
                 <div class="row">
                     <div class="col-sm-6">
@@ -123,21 +124,23 @@
                         <p>
                             contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
                         </p>
-
+                        <div class="map-area">
+                            <div id="map"></div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- bloc-7 END -->
 
         <!-- ScrollToTop Button -->
         <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
         <!-- ScrollToTop Button END-->
-        <div class="map-area">
-            <div id="map"></div>
-        </div>
+
+
+
         <!-- Footer - bloc-8 -->
-        <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+        <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
             <div class="container bloc-sm">
                 <div class="row">
                     <div class="col-sm-12">
@@ -169,12 +172,14 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </footer>
         <!-- Footer - bloc-8 END -->
 
-    </div>
+    </main>
     <!-- Principal conteneur END -->
+
     <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqz3arn3v5onFyQIMqemhT7LzuvkDUrls&callback=initMap"></script>
+
 </body>
 
 </html>
