--- a/acceuil.html
+++ b/acceuil.html
@@ -50,10 +50,10 @@
 
 <body>
     <!-- Principal conteneur -->
-    <div class="page-container">
+    <main class="page-container">
 
         <!-- bloc-0 -->
-        <div class="bloc bgc-white l-bloc menu_fixed" id="bloc-0">
+        <header class="bloc bgc-white l-bloc menu_fixed" id="bloc-0">
             <div class="container bloc-sm">
                 <nav class="navbar row">
                     <div class="navbar-header">
@@ -83,11 +83,12 @@
                     </div>
                 </nav>
             </div>
-        </div>
+        </header>
         <!-- bloc-0 END -->
 
+
         <!-- bloc-1-presentation -->
-        <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax submenu" id="Accueil">
+        <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax submenu" id="Accueil">
             <div class="container bloc-lg">
                 <div class="row tight-width-whitespace">
                     <div class="col-sm-12">
@@ -101,11 +102,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- bloc-1-presentation END -->
 
         <!-- bloc-2-services -->
-        <div class="bloc bgc-white l-bloc" id="Services">
+        <section class="bloc bgc-white l-bloc" id="Services">
             <div class="container bloc-md">
                 <div class="row">
                     <div class="col-sm-12 text-center">
@@ -155,11 +156,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- bloc-2-services END -->
 
         <!-- bloc-3-what-i-do Objectifs -->
-        <div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="Objectifs">
+        <section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="Objectifs">
             <div class="container bloc-lg">
                 <div class="row tight-width-whitespace black-background">
                     <div class="col-sm-12">
@@ -174,11 +175,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- bloc-3-what-i-do END -->
 
         <!-- bloc-4-portfolio -->
-        <div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="Portfolio">
+        <section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="Portfolio">
             <div class="container bloc-lg">
                 <div class="row">
                     <div class="col-sm-12 text-center">
@@ -226,11 +227,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- bloc-4-portfolio END -->
 
         <!-- bloc-5-cta -->
-        <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+        <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
             <div class="container bloc-lg">
                 <div class="row">
                     <h2 class="mg-md text-center tc-white">
@@ -241,13 +242,15 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- bloc-5-cta END -->
         <!-- ScrollToTop Button -->
         <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
         <!-- ScrollToTop Button END-->
+
+
         <!-- Footer - bloc-8 -->
-        <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+        <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
             <div class="container bloc-sm">
                 <div class="row">
                     <div class="col-sm-12">
@@ -319,10 +322,10 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </footer>
         <!-- Footer - bloc-8 END -->
 
-    </div>
+    </main>
     <!-- Principal conteneur END -->
 
 
