--- a/acceuil.html
+++ b/acceuil.html
@@ -27,7 +27,6 @@
     <script src="js/bootstrap.js"></script>
     <script src="js/blocs.js"></script>
     <script src="js/jquery.touchSwipe.js" defer></script>
-    <script src="js/gmaps.js"></script>
     <title>La Panthère Agence Web Design</title>
 
 
@@ -208,7 +207,7 @@
                 </div>
                 <div class="row tight-width-whitespace portfolio-row">
                     <div class="col-sm-6">
-                        <a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"></a>
+                        <a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"></a>
                         <h3 class="mg-md text-center">
                             Création d'un site internet pour un voyageur
                         </h3>
@@ -217,7 +216,7 @@
                         </p>
                     </div>
                     <div class="col-sm-6">
-                        <a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"></a>
+                        <a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"></a>
                         <h3 class="mg-md text-center">
                             Conception d'un site pour une agence de mariage
                         </h3>
