Modification contact with number and header

--- a/acceuil.html
+++ b/acceuil.html
@@ -56,7 +56,7 @@
             <div class="container bloc-sm">
                 <nav class="navbar row">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40"></a>
+                        <a class="navbar-brand" href="acceuil#présentation"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40"></a>
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
                             <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
                         </button>
@@ -283,38 +283,20 @@
                             <div class="col-sm-4">
                                 Partenaires
                                 <ul>
-                                    <li><a href="http://voiture.com" target="_blank">voiture.com</a></li>
+                                    <li><a href="http://www.seo.fr" target="_blank">seo.fr</a></li>
                                     <li><a href="http://pizza.com" target="_blank">pizza.com</a></li>
                                     <li><a href="http://matoiture.com" target="_blank">matoiture.com</a></li>
-                                    <li><a href="http://immobilierseo.com" target="_blank">immobilierseo.com</a></li>
+                                    <li><a href="https://www.lyon.fr/" target="_blank">Ville de Lyon</a></li>
                                 </ul>
                             </div>
                             <div class="col-sm-4">
-                                Annuaires liste 1
+                                Référentiels
                                 <ul>
-                                    <li><a href="http://annuaireagence.com" target="_blank">annuaireagence.com</a></li>
-                                    <li><a href="http://annuaireseo.com" target="_blank">annuaireseo.com</a></li>
-                                    <li><a href="http://annuairemarketing.com" target="_blank">annuairemarketing.com</a></li>
-                                    <li><a href="http://123seoture.com">123seo.com</a></li>
-                                    <li><a href="http://123site.com" target="_blank">123site.com</a></li>
-                                    <li><a href="http://annuairewordpress.com" target="_blank">annuairewordpress.com</a></li>
-                                    <li><a href="http://listeagence.com" target="_blank">listeagence.com</a></li>
-                                    <li><a href="http://meilleuresagencesparis.com" target="_blank">meilleuresagencesparis.com</a></li>
-                                    <li><a href="http://listeseo.com" target="_blank">listeseo.com</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-sm-4">
-                                Annuaires liste 2
-                                <ul>
-                                    <li><a href="http://betterseo.com" target="_blank">betterseo.com</a></li>
-                                    <li><a href="http://ameliorerseo.com" target="_blank">ameliorerseo.com</a></li>
-                                    <li><a href="http://seojuicelien.com" target="_blank">seojuicelien.com</a></li>
-                                    <li><a href="http://meilleursliens.com" target="_blank">meilleursliens.com</a></li>
-                                    <li><a href="http://liensagogo.com" target="_blank">liensagogo.com</a></li>
-                                    <li><a href="http://backlink.com" target="_blank">backlink.com</a></li>
-                                    <li><a href="http://linkjuiceannuaire.com" target="_blank">linkjuiceannuaire.com</a></li>
-                                    <li><a href="http://remontersurgoogle.com" target="_blank">remontersurgoogle.com</a></li>
-                                    <li><a href="http://vraiseofiable.com" target="_blank">vraiseofiable.com</a></li>
+                                    <li><a href="https://www.118712.fr/" target="_blank">118712</a></li>
+                                    <li><a href="https://www.infobel.com/" target="_blank">Infobel</a></li>
+                                    <li><a href="https://www.yelp.com/" target="_blank">Yelp</a></li>
+                                    <li><a href="https://www.gralon.net/">Gralon</a></li>
+
                                 </ul>
                             </div>
                         </div>
