--- a/acceuil.html
+++ b/acceuil.html
@@ -105,7 +105,7 @@
         <!-- bloc-1-presentation END -->
 
         <!-- bloc-2-services -->
-        <section class="bloc bgc-white l-bloc" id="Services">
+        <section class="bloc bgc-white l-bloc adjust_services" id="Services">
             <div class="container bloc-md">
                 <div class="row">
                     <div class="col-sm-12 text-center">
