Modification menu link

--- a/acceuil.html
+++ b/acceuil.html
@@ -76,7 +76,10 @@
                                 <a href="acceuil#Portfolio">Portfolio</a>
                             </li>
                             <li>
-                                <a href="contact#NousTrouver">Contact</a>
+                                <a href="contact#NousContacter">Contact</a>
+                            </li>
+                            <li>
+                                <a href="contact#NotreAdresse">Adresse</a>
                             </li>
                         </ul>
                     </div>
