--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,10 @@
                                 <a href="acceuil#Portfolio">Portfolio</a>
                             </li>
                             <li>
-                                <a href="contact#NousTrouver">Contact</a>
+                                <a href="contact#NousContacter">Contact</a>
+                            </li>
+                            <li>
+                                <a href="contact#NotreAdresse">Adresse</a>
                             </li>
                         </ul>
                     </div>
@@ -104,7 +107,7 @@
 
         <!-- bloc-7 -->
         <section class="bloc bgc-white l-bloc" id="Formulaire">
-            <h2 class="footer_contact_us">Nous contacter</h2>
+            <h2 class="footer_contact_us" id="NousContacter">Nous contacter</h2>
             <div class="container bloc-lg">
 
                 <div class="row">
@@ -150,7 +153,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-6 footer_find_us" id="Adresse">
+            <div class="col-sm-6 footer_find_us" id="NotreAdresse">
                 <h2>Trouver notre agence</h2>
                 <p>
                     2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
