--- a/contact.html
+++ b/contact.html
@@ -92,8 +92,8 @@
                         <h1 class="text-center hero-bloc-text tc-white ">
                             Agence La Panthère
                         </h1>
-                        <h2>Parlons web design !</h2>
                         <div class="text-center">
+                            <h2 class="tc-white">Parlons web design !</h2>
                             <p class="text-center mg-lg tc-white tight-width-whitespace">
                                 Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br> Parlez-nous de votre projet en complétant le formulaire ci-dessous.
                             </p>
