--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
             <div class="container bloc-lg">
 
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-sm-6 contact_us">
                         <h3 class="text-center">Remplissez le formulaire</h3>
                         <form id="form_1">
                             <!--novalidate data-success-msg="Your message has been sent." data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"-->
