--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,23 @@
 
     <meta charset="utf-8">
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <meta name="description" content="">
+    <meta name="description" content="La description qui déchire avec une bonne explication qui donne
+    envie de cliquer sur le lien">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name=”robots” content=”index,follow”>
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+    <!-- META FB og:title, og:type, og:image et og:url. -->
+    <meta property="og:image" content="https://zzmck.github.io/Session4/img/logo.png">
+    <meta property="og:description" content="La description qui déchire avec une bonne explication qui donne
+    envie de cliquer sur le lien">
+    <meta property="og:title" content="La meilleure agence de WebDesign sur lyon">
+    <meta property="og:url" content="https://zzmck.github.io/Session4/acceuil">
+    <!-- META twitter twitter:card, twitter:site, twitter:title, twitter:description, and twitter:image. -->
+    <meta name="twitter:title" content="La meilleure agence de WebDesign sur lyon.">
+    <meta name="twitter:site" content="https://zzmck.github.io/Session4/acceuil">
+    <meta name="twitter:description" content="La description qui déchire avec une bonne explication qui donne
+    envie de cliquer sur le lien">
+    <meta name="twitter:image" content="https://zzmck.github.io/Session4/img/logo.png">
+    <meta name="twitter:card" content="https://zzmck.github.io/Session4/img/logo.png">
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="style.css">
