--- a/acceuil.html
+++ b/acceuil.html
@@ -15,13 +15,16 @@
     envie de cliquer sur le lien">
     <meta property="og:title" content="La meilleure agence de WebDesign sur lyon">
     <meta property="og:url" content="https://zzmck.github.io/Session4/acceuil">
+    <meta property="og:type" content="Je ne sais pas quoi mettre">
     <!-- META twitter twitter:card, twitter:site, twitter:title, twitter:description, and twitter:image. -->
     <meta name="twitter:title" content="La meilleure agence de WebDesign sur lyon.">
     <meta name="twitter:site" content="https://zzmck.github.io/Session4/acceuil">
     <meta name="twitter:description" content="La description qui déchire avec une bonne explication qui donne
     envie de cliquer sur le lien">
     <meta name="twitter:image" content="https://zzmck.github.io/Session4/img/logo.png">
+    <meta name="twitter:twitter:image:alt" content="La panthère meilleure agence de web design">
     <meta name="twitter:card" content="https://zzmck.github.io/Session4/img/logo.png">
+
     <!-- a modifier-->
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     <!--<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">-->
