--- a/contact.html
+++ b/contact.html
@@ -131,19 +131,19 @@
                         <form id="form_1">
                             <!--novalidate data-success-msg="Your message has been sent." data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"-->
                             <div class="form-group">
-                                <label for="name">Nom</label>
+                                <label arialabel="Nom" for="name">Nom</label>
                                 <input type="text" id="name" class="form-control" required>
                             </div>
                             <div class="form-group">
-                                <label for="email">Adresse email</label>
+                                <label arialabel="Email" for="email">Adresse email</label>
                                 <input type="email" id="email" class="form-control" required>
                             </div>
                             <div class="form-group">
-                                <label for="reference">Comment nous avez-vous connu ?</label>
+                                <label arialabel="Référence" for="reference">Comment nous avez-vous connu ?</label>
                                 <input type="text" id="reference" class="form-control" required>
                             </div>
                             <div class="form-group">
-                                <label for="message">Brief de votre projet (Ajoutez autant de détails que nécessaire)</label>
+                                <label arialabel="Projet" for="message">Brief de votre projet (Ajoutez autant de détails que nécessaire)</label>
                                 <textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
                             </div>
                             <button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
@@ -190,22 +190,22 @@
                         <div class="row row-no-gutters social">
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="#"><span class="fa fa-twitter icon-md"></span></a>
+                                    <a class="social" href="#"><span aria-label="Twitter" class="fa fa-twitter icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="#"><span class="fa fa-facebook icon-md"></span></a>
+                                    <a class="social" href="#"><span aria-label="Facebook" class="fa fa-facebook icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
+                                    <a class="social" href="#"><span aria-label="Dribbble" class="fa fa-dribbble icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
+                                    <a class="social" href="#"><span aria-label="Instagram" class="fa fa-instagram icon-md"></span></a>
                                 </div>
                             </div>
                         </div>
