aria-label menu

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
+    <meta name="keywords" content="keyword a detailler">
     <meta name="description" content="La description qui déchire avec une bonne explication qui donne
     envie de cliquer sur le lien">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -74,22 +74,22 @@
                     <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
                         <ul class="site-navigation nav navbar-nav">
                             <li>
-                                <a href="acceuil#Présentation">Présentation</a>
+                                <a aria-label="Présentation de l'agence" href="acceuil#Présentation">Présentation</a>
                             </li>
                             <li>
-                                <a href="acceuil#Services">Services</a>
+                                <a aria-label="Nos services" href="acceuil#Services">Services</a>
                             </li>
                             <li>
-                                <a href="acceuil#Objectifs">Objectifs</a>
+                                <a aria-label="Nos objectifs" href="acceuil#Objectifs">Objectifs</a>
                             </li>
                             <li>
-                                <a href="acceuil#Portfolio">Portfolio</a>
+                                <a aria-label="Nos créations" href="acceuil#Portfolio">Portfolio</a>
                             </li>
                             <li>
-                                <a href="contact#NousContacter">Contact</a>
+                                <a aria-label="Nous contacter" href="contact#NousContacter">Contact</a>
                             </li>
                             <li>
-                                <a href="contact#NotreAdresse">Adresse</a>
+                                <a aria-label="Notre adresse" href="contact#NotreAdresse">Adresse</a>
                             </li>
                         </ul>
                     </div>
@@ -103,7 +103,7 @@
             <div class="container bloc-lg">
                 <div class="row tight-width-whitespace">
                     <div class="col-sm-12">
-                        <img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web paris, création logo paris">
+                        <img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Agence La Panthère Lyon">
                         <h1 class="text-center hero-bloc-text tc-white ">
                             Agence La Panthère
                         </h1>
