aria header contact

--- a/contact.html
+++ b/contact.html
@@ -66,9 +66,9 @@
             <div class="container bloc-sm">
                 <nav class="navbar row">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="acceuil#présentation"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40"></a>
-                        <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+                        <a class="navbar-brand" href="acceuil#présentation"><img src="img/agence-la-panthere-monochrome.svg" alt="Logo de l'agence pathère" height="40"></a>
+                        <button id="nav-toggle" aria-label="Menu déroulant" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+					<span class="sr-only">Menu déroulant</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
                     </div>
                     <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
